feat: Enhance Student Records Manager with JavaFX GUI and improved functionality
- Added a JavaFX GUI version (AppGUI.java) with a modern interface and all features from the console version.
- Updated README.md to reflect the new GUI version and installation instructions.
- Implemented automatic student ID generation in StudentManager.java.
- Refactored add, update, and remove student methods to include exception handling.
- Introduced custom exceptions for better error management (StudentException.java).
- Enhanced Student class with Comparable interface and static Comparators for sorting.
- Improved input validation and error handling in both console and GUI versions.
- Added .gitignore to exclude compiled files and IDE-specific settings.
- Created JAVAFX_SETUP.md for detailed JavaFX setup instructions.