@@ -1,7 +1,16 @@
 # Student Records Manager
 
-A Java console application for managing student records.  
+A comprehensive Java application for managing student records, available in both **Console** and **JavaFX GUI** versions.  
 This project demonstrates Object-Oriented Programming, `ArrayList` usage, recursion, input validation, sorting, and basic statistical calculations.
+
+---
+
+## 🎯 Two Versions Available
+
+1. **Console Version** (`App.java`) - Text-based menu interface
+2. **JavaFX GUI Version** (`AppGUI.java`) - Modern graphical interface with tables, buttons, and dialogs
+
+Both versions share the same core logic and preserve all functionality, comments, and recursive algorithms.
 
 ---
 
@@ -33,18 +42,47 @@ This project demonstrates Object-Oriented Programming, `ArrayList` usage, recurs
 
 ## How to Run
 
-### Option 1 – Command Line
+### Console Version (App.java)
+
+#### Option 1 – Command Line
 ```bash
+cd src
 javac *.java
 java App
 ```
 
-### Option 2 – VS Code
-Open `App.java` and press **Run**.
+#### Option 2 – VS Code
+Open `App.java` and press **Run** (F5).
 
 ---
 
-## Menu Options
+### JavaFX GUI Version (AppGUI.java)
+
+#### Prerequisites
+- JavaFX SDK installed (bundled with Java 11+ or download separately)
+
+#### Option 1 – Command Line
+```bash
+cd src
+javac --module-path "path/to/javafx-sdk/lib" --add-modules javafx.controls *.java
+java --module-path "path/to/javafx-sdk/lib" --add-modules javafx.controls AppGUI
+```
+
+#### Option 2 – VS Code
+1. Open `AppGUI.java`
+2. Configure JavaFX in your launch.json (add VM arguments for module path)
+3. Press **Run** (F5)
+
+#### Option 3 – Using Maven/Gradle
+Create a build file with JavaFX dependencies and run:
+```bash
+mvn javafx:run  # or
+gradle run
+```
+
+---
+
+## Menu Options (Console Version)
 
 ```
 1. Add a new student
@@ -77,10 +115,29 @@ Open `App.java` and press **Run**.
 
 ## Project Structure
 
-- `Student.java` – Student model (encapsulation, getters/setters)
-- `StudentManager.java` – CRUD, sorting, recursion, statistics
-- `App.java` – Menu system and user interaction
+- `Student.java` – Student model (encapsulation, getters/setters, Comparable interface, static Comparators)
+- `StudentManager.java` – CRUD operations, sorting, recursion, statistics  
+- `StudentException.java` – Custom exception classes for error handling
+- `App.java` – **Console version** with menu system and text-based user interaction
+- `AppGUI.java` – **JavaFX GUI version** with tables, buttons, dialogs, and modern interface
 
 ---
 
-This project satisfies all assignment requirements, including use of ArrayList, recursion, input validation, sorting, searching, and at least five functional features.
+## GUI Features
+
+The JavaFX version (`AppGUI.java`) includes:
+- ✅ **TableView** displaying all students with sortable columns
+- ✅ **Add Student Dialog** with auto-generated IDs and validation
+- ✅ **Search Dialogs** for ID and last name (uses recursive search)
+- ✅ **Update Dialog** pre-filled with current student data
+- ✅ **Remove Confirmation** dialog for safe deletion
+- ✅ **Sort Options** dialog with multiple criteria
+- ✅ **Statistics Window** showing recursive GPA counts
+- ✅ **Status Bar** for feedback messages
+- ✅ **Error Handling** with user-friendly alert dialogs
+
+All recursive methods, validation logic, and functionality from the console version are preserved in the GUI.
+
+---
+
+This project satisfies all assignment requirements, including use of ArrayList, recursion, input validation, sorting, searching, and at least five functional features. **Bonus: Complete JavaFX GUI implementation.**
